syntax = "proto3";

package transaction.service;

option java_package = "com.bg.transactionmicroservice.grpc";
option java_multiple_files = true;

message PurchaseResponse {
  bool success = 1;
  optional string error_message = 2;
}